# omp-lua

./: .gitmodules  CMakeLists.txt  main.cpp  template.lua
